--- a/templates/work_orders/second_work_order.html
+++ b/templates/work_orders/second_work_order.html
@@ -60,13 +60,32 @@
   </li>
   
   <li class="orders"><!-- 2 --> 
-  Using Django/Jinja/Python (no JS): ‘essays’ app: For watchtower.html template rank and order Generator class objects (‘tarot_card_image’, ‘description’,  ‘st_paul_contents’) according to ‘watchtower_position’ integer as specified in admin panel by admin user. Inside the for loop in the watchtower.html template, this collection of class objects must be positioned in between ‘introduction’ and ‘conclusion’. 
+   <span class="completed">Using Django/Jinja/Python (no JS): ‘essays’ app: For watchtower.html template rank and order Generator class objects (‘tarot_card_image’, ‘description’,  ‘st_paul_contents’) according to ‘watchtower_position’ integer as specified in admin panel by admin user. Inside the for loop in the watchtower.html template, this collection of class objects must be positioned in between ‘introduction’ and ‘conclusion’. 
     <ul>
-        <li>Do the same for slashdot.html template and ‘slashdot_position’ in between ‘introduction’ and ‘conclusion’. You’ll need to invoke ‘tarot_card_image’, ‘description’, (like above) except instead of ‘st_paul_contents’, you’ll use these two: ‘galileo_content’ as well as ‘f_loss_content’ </li>
+        <li>Do the same for slashdot.html template and ‘slashdot_position’ in between ‘introduction’ and ‘conclusion’. You’ll need to invoke ‘tarot_card_image’, ‘description’, (like above) except instead of ‘st_paul_contents’, you’ll use these two: ‘galileo_content’ as well as ‘f_loss_content’</span> </li>
 
     </ul>
+    </span>
+    <br>
+    <strong><span class="highlightme">REVISED #2 AS OF 30 JANUARY:</span></strong>
+    Using Django/Jinja/Python (no JS): ‘essays’ app: Inside ‘templates/essays/slashdot.html’ template, from generators app (models.py) show these instances:
+    <ul>
+        <li>‘tarot_card_image’, </li>
+        <li>‘description’,</li>
+        <li>‘galileo_content’ </li>
+        <li>‘f_loss_content’</li>
+    </ul>
+    And from essays app (models.py) show the instances:
+    <ul>
+        <li>‘title’</li>
+        <li>‘introduction’</li>
+        <li>‘conclusion’</li>
+    </ul>
+    I have already started writing this revised slashdot.html template which includes comments which you can take a look at which might enable you to better understand and see what I am trying to achieve. For even further clarity, <a href="https://imgur.com/slOxEre">here is a mockup / diagram of how the slashdot.html template should look</a>.
+    <br>
+    For slashdot.html, I do not need Django to serve all 22 tarot cards. Instead, Django should serve only the tarot cards in ascending order according to the integer value specified in ‘slashdot_position’ (in generators/models.py). If there is no integer specified, then Django should not serve that tarot card. So if there are only 3 tarot cards with integer values in ‘slashdot_position’ then when Django serves the templates/essays/slashdot.html, only those 3 will show in ascending order (1,2,3 as specified in ‘slashdot_position’ ). 
 
-</li>
+    </li>
 
 <li class="orders"><!-- 3 --> 
 With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able to click a  button to  “export” some of my HTML templates (along with all style sheets and client side JS static files) and splice everything into single index.html file. The JS and CSS should be spliced into the header in a single web page. <em>The end goal / purpose for this task here is to have a fully functional 'index.html' for  each app article so that you can download them them in a web browser locally offline while retaining the content and form</em>. 
@@ -110,7 +129,7 @@ With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able
 CSS/Bootstrap: See navbar features <a href="https://imgur.com/a/DjexI8c">here</a>. Port these features (at narrower resolutions) to my tarot_juicer navbar:
   <ul>
     <li><span class="completed">Rather than wrapping against left hand side of the browser window, center align menu options</span><strong>COMPLETED 25 JANUARY</strong></li>
-    <li><span class="highlightme">Add “Close” menu option in crimson (instead of green) Just as it appears in the image linked to above</span></li>
+    <li><span class="completed">Add “Close” menu option in crimson (instead of green) Just as it appears in the image linked to above</span> <strong>COMPLETED 27 JANUARY</strong></li>
     <li><span class="completed">Show hamburger button with three horizontal bars (which are thicker than normal) + center align the hamburger button as well</span><strong>COMPLETED 27 JANUARY</strong></li>
     <li><span class="completed">Remove crimson star icon</span><strong>COMPLETED 27 JANUARY</strong></li>
     <!--<li></li>
@@ -124,7 +143,7 @@ CSS/Bootstrap: See navbar features <a href="https://imgur.com/a/DjexI8c">here</a
 </li>
 
 <li class="orders"><!-- 9 --> 
-CSS: When narrative content is untoggled, invoke ‘fadeInRightBig’.  <strong>UPDATE 25 JANUARY: </strong> <span class="highlightme">With your changes today, this has been only <em>partially</em> implemented. Now there is an animation when the website viewer untoggles the narrative conten. The animation should take 3 seconds to complete (like the other narrative content) HOWEVER right now when the image is untoggled, the animation  cuts out in less than 1 second. The full animation does not complete when toggling out. Could you fix this please? Thanks.</span>
+CSS: When narrative content is untoggled, invoke ‘fadeInRightBig’.  <strong>UPDATE 25 JANUARY: </strong> <span class="completed">With your changes today, this has been only <em>partially</em> implemented. Now there is an animation when the website viewer untoggles the narrative conten. The animation should take 3 seconds to complete (like the other narrative content) HOWEVER right now when the image is untoggled, the animation  cuts out in less than 1 second. The full animation does not complete when toggling out. Could you fix this please? Thanks.</span> <strong>COMPLETED 28 JANUARY</strong>
 </li>
 
 <li class="orders"><!-- 10 --> 
@@ -140,7 +159,7 @@ CSS: When narrative content is untoggled, invoke ‘fadeInRightBig’.  <strong>
 </li>
 
 <li class="orders"> <!-- 13 --> 
-<span class="highlightme">JS: For the portal landing page, make red  squiggly particles grow larger and larger over the course of 1 minute until they consume the whole background screen, rendering the canvas completely red.</span>
+<span class="completed">JS: For the portal landing page, make red  squiggly particles grow larger and larger over the course of 1 minute until they consume the whole background screen, rendering the canvas completely red.</span><strong>COMPLETED 28 JANUARY</strong>
 </li>
 
 </ol>
