--- a/templates/work_orders/second_work_order.html
+++ b/templates/work_orders/second_work_order.html
@@ -88,7 +88,7 @@
     </li>
 
 <li class="orders"><!-- 3 --> 
-With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able to click a  button to  “export” some of my HTML templates (along with all style sheets and client side JS static files) and splice everything into single index.html file. The JS and CSS should be spliced into the header in a single web page. <em>The end goal / purpose for this task here is to have a fully functional 'index.html' for  each app article so that you can download them them in a web browser locally offline while retaining the content and form</em>. 
+<span class="completed">With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able to click a  button to  “export” some of my HTML templates (along with all style sheets and client side JS static files) and splice everything into single index.html file. The JS and CSS should be spliced into the header in a single web page. <em>The end goal / purpose for this task here is to have a fully functional 'index.html' for  each app article so that you can download them them in a web browser locally offline while retaining the content and form</em>. 
     <ul>
         <li>I created a new template called 'all_at_random_content_dump.html' for generators app.  The purpose of this template is to gather or collect all Generator content, loop through each class object and pull each of them (there will be 22 entries in production) and dump EVERYTHING into this template in ascending order according to 'generator.number'. </li>
         <li>Do the same for these two other templates: slashdot.html, watchtower.html. For watchtower.html, you'll need to pull: 
@@ -107,8 +107,65 @@ With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able
         </li>
     </ul>
     
+</li></span>
+ <br>
+    <strong><span class="highlightme">REVISED #3 AS OF 30 JANUARY:</span></strong>
+With Django/Jinja/Python (no JS): inside templates/essays/all_content_dump.htmt, I need Django to dump all content:
+
+<ul>
+ <li> from generators app (inside models.py below Generator class):
+    <ul>
+        <li>title</li>
+        <li>tarot_card_image</li>
+        <li>description</li>
+        <li>galileo_content</li>
+        <li>f_loss_content</li>
+        <li>st_paul_content</li>
+    </ul>
 </li>
 
+<li>from essays app (inside models.py below EssayArticle class):
+    <ul>
+        <li>title</li>
+        <li>content</li>
+    </ul>
+</li>
+
+<li>from essays app (inside models.py below CuratedSlashdot class):
+    <ul>
+        <li>title</li>
+        <li>introduction</li>
+        <li>conclusion</li>
+    </ul>
+</li>
+
+<li>from essays app (inside models.py below CuratedWatchtower class):
+    <ul>
+        <li>title</li>
+        <li>introduction</li>
+        <li>conclusion</li>
+    </ul>
+</li>
+
+<li>from essays app (inside models.py below ContentChanges class):
+    <ul>
+        <li>title</li>
+        <li>content</li>
+    </ul>
+</li>
+
+<li>from essays app (inside models.py below ObjectionsArticle class):
+    <ul>
+        <li>title</li>
+        <li>content</li>
+        </ul>
+</li>
+<li>from essays app (inside models.py below BibliographyArticle class):
+    <ul>
+        <li>title</li>
+        <li>bibio</li>
+    </ul>
+</li>
 <li class="orders"><!-- 4 --> 
 <span class="completed">Using Django/Jinja: let string entered inside ‘web_address’ object (for EssayArticle) by admin user to distinguish it from the other essay articles and reflect inside web address so that it will be located at  http://localhost:8000/article/< web_address_name >.  The web_address_name will be a string entered by the admin user in the Dashboard. If the admin enters spaces as part of the article title, the spaces will be replaced by underscores in the web address bar. In this way, if the title specified by the blog poster is “Tarot and Forrest Gump”, then the address needs to be: http://127.0.0.1:8000/article/tarot_and_forrest_gump/ </span>
 <strong>COMPLETED 27 JANUARY</strong></li>
