--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -1,6 +1,6 @@
 
 :root {
-  --number-cards: 4;
+  --number-cards: 7;
   --total-cards: 8;
   --gap: 10px;
   --grid-basis: calc(100% / var(--number-cards));
@@ -16,17 +16,38 @@
 .slider {
   display: grid;
   grid-gap: var(--gap);
-  grid-auto-columns: var(--grid-basis);
+  grid-template-columns: repeat(auto-fill, 1fr);
   overflow: hidden;
-  padding: 0 10px;
+  padding: 20px 10px;
 }
 
 .slide {
   grid-row: 1;
+  scroll-snap-align: start;
+  min-width: 95px;
+  max-width: 150px;
+}
+
+.slide img:hover {
+  box-shadow: 0 0 5px white, 0 0 10px white;
 }
 
 .slide img {
   border-radius: 5px;
   height: 100%;
   object-fit: cover;
+}
+
+.slider:hover{
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.slider.grabbing {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
+}
+
+.snap {
+  scroll-snap-type: x mandatory;
 }
