--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -22,7 +22,7 @@
     <div class="slider">
         {% for card in cards %}
         <div class="slide">
-              <img src="{{ STATIC_URL }}{{ card.tarot_card_thumbnail.url }}" data-card="{{ card.number }}" alt="{{ card.title }}" draggable="false" />
+              <img src="{{ STATIC_URL }}{{ card.tarot_card_thumbnail.url }}" data-card="{{ card.number }}" alt="{{ card.title }}" {% if card.number == generator.number %} id="active"{% endif %} draggable="false" />
         </div>
         {% endfor %}
     </div>
