--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -1,4 +1,4 @@
-
+/* CSS Variables https://developer.mozilla.org/en-US/docs/Web/CSS/--* */
 :root {
   --gap: 10px;
   --carousel-width: 80%;
@@ -8,6 +8,7 @@
   width: var(--carousel-width);
 }
 
+/* The slider - grid container */
 .slider {
   display: grid;
   grid-gap: var(--gap);
@@ -16,6 +17,7 @@
   padding: 20px 10px;
 }
 
+/* Individual slide, contains images */
 .slide {
   grid-row: 1;
   scroll-snap-align: start;
@@ -24,7 +26,7 @@
 }
 
 .slide img:hover {
-  box-shadow: 0 0 5px white, 0 0 10px white;
+  box-shadow: 0 0 5px crimson, 0 0 10px crimson;
 }
 
 .slide img {
@@ -34,7 +36,7 @@
 }
 
 .slide img#active {
-  box-shadow: 0 0 5px orange, 0 0 10px orange;
+  box-shadow: 0 0 5px white, 0 0 10px white;
 }
 
 .slider:hover{
@@ -47,6 +49,7 @@
   cursor: -webkit-grabbing;
 }
 
+/* Makes css snap work - CSS Snap API */
 .snap {
   scroll-snap-type: x mandatory;
 }
