--- a/templates/essays/article.html
+++ b/templates/essays/article.html
@@ -18,20 +18,27 @@ Previously this was for articles profiling the protagonists of The Wizard of Oz 
 {% load static %}
 
 {% block extra_head %}
-  <!-- <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}"> -->
+  <!-- e.g. <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}"> -->
+  <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
+
 {% endblock %}
 
 {% block content %}    
+
+    <article class="article">
+    <div class="essay">
     
     {% if articles %}
 
         {% for article in articles %}    
 
-            <h4> {{ article.title|safe }} </h4>
+            <h1> {{ article.title|safe }} </h1>
             <p> {{ article.content|safe }} </p>
 
         {% endfor %}
 
     {% endif %}
 
+    </div><!-- end essay -->
+    </article>
 {% endblock %}    
