remove enlarged active, and increase selected box shadow glow

--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -42,8 +42,8 @@
 }
 
 .slide img#active {
-  box-shadow: 0 0 5px white, 0 0 10px white;
-  transform: scale(1.5);
+  box-shadow: 0 0 41px white, 0 0 24px white;
+  /* transform: scale(1.5); */
 }
 
 .slider:hover {
