--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -1,8 +1,16 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="robots" content="noindex,nofollow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>CONTENT DUMP</title>
+
 {% comment %} {% extends 'base.html' %} {% endcomment %}
 
 {% load static %}
-
-{% block extra_head %}
      
      <link rel="stylesheet" href="{% static 'css/essay-main.css' %}">
      
@@ -13,9 +21,8 @@
             margin-left: 0px;
           }
       </style>
-
-{% endblock %}
-
+</head>
+<body>
 {% block content %}
 
       <div class="container">
@@ -80,3 +87,5 @@ if(window.location.pathname.split('/')[2] === ""){
 </script>
 
 {% endblock %}
+</body>
+</html>
