--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -8,27 +8,21 @@
 
 {% block content %}
 
-  <div class="container">
   {% if slashdot_obj %}
-        <div class="col-lg-12"><h2>{{ slashdot_obj.title }}</h2></div>
-        <p class="text-justify"> {{ slashdot_obj.introduction }} </p>
+        <div><h2>{{ slashdot_obj.title }}</h2></div>
+        <p> {{ slashdot_obj.introduction|safe }} </p>
         <br>
           {% for generator in generators %}
               <h4>Generator: {{ generator.slashdot_position }}</h4>
-              <div class="row">
-                  <div class="col-lg-11 text-justify">
-                    <p>{{ generator.description }}</p>
-                    <p>{{ generator.galileo_content }}</p>
-                    <p>{{ generator.f_loss_content }}</p>
-                  </div>
-                  <div class="col-lg-1">
-                    <img src="{{ generator.tarot_card_image }}" width="180"/>
-                  </div>
-              </div>
+              <p>{{ generator.description|safe }}</p>
+                <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}" width="180"/>
+              <p>{{ generator.galileo_content|safe }}</p>
+              <p>{{ generator.f_loss_content|safe }}</p>
+            
           {% endfor %}
         <br>
         <h3>Conclusion:</h3>
-        <p class="text-justify">{{ slashdot_obj.conclusion }} </p>
+        <p>{{ slashdot_obj.conclusion|safe }} </p>
         <br>
   {% endif %}
   </div>
