--- a/templates/essays/all_content_dump.html
+++ b/templates/essays/all_content_dump.html
@@ -32,8 +32,11 @@
                   <h2>{{ generator.title|safe }}</h2>
                   <p>{{ generator.description|safe }}</p>
                   <img class="tarot-small-key right" src="{{ generator.tarot_card_image }}">
+                  <h3>Galileo</h3>
                   <p>{{ generator.galileo_content|safe }}</p>
+                  <h3>FLOSS</h3>
                   <p>{{ generator.f_loss_content|safe }}</p>
+                  <h3>St Paul</h3>
                   <p>{{ generator.st_paul_content|safe }}</p>            
             {% endfor %}
 
