--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <style> 
-  
+  ::selection {
+  color: black;
+  background: white;
+}
   </style>
 {% endblock %}
 
