--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,11 +8,10 @@
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
         <br /> 
         <br /> 
-        <div class="footer-styles">
-            <i class="fa fa-compass fa-2x"></i>
-            <p>
-                Pulu Amsic Drive, Angeles, Pampanga, Philippines
-            </p>    
+        <i class="fa fa-compass fa-2x"></i>
+        
+        <div class="footer-styles">            
+        <p>Pulu Amsic Drive, Angeles, Pampanga, Philippines</p>    
         </div>
         
     <br /> <br /> 
