--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -37,7 +37,7 @@ img {
   border-radius: 5px;
 }
 #showcase .overlay {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -53,7 +53,7 @@ img {
   overflow: hidden;
 }
 #services::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -69,7 +69,7 @@ img {
   min-height: 200px;
 }
 #showcase-inner::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -213,14 +213,11 @@ a:active {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#main-footer .footer-styles {
   margin-right: 10px;
-}
-
-#main-footer .footer-styles {
   margin-top: 10px;
+  width: 168px;
+  margin: auto;
+  margin-bottom: -55px;
 }
 
 .custom-nav-button {
