--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -6,12 +6,9 @@
   <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-  <style> 
-  ::selection {
-  color: black;
-  background: white;
-}
-  </style>
+  
+  <style>    </style>
+  
 {% endblock %}
 
 {% block content %}    
