Remove reference to jquery.easing.min.js

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -196,7 +196,7 @@ h2 {color: white;}
   
   </div>
 
-  <script src="js/jquery.easing.min.js"></script>
+ <!--  {% comment %} <script src="js/jquery.easing.min.js"></script> {% endcomment %} -->
 
 
   </body>
