Finish list of 8 requirements

--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -65,7 +65,7 @@ Javascript: Default toggled narrative content must be Galileo only (with FLOSS a
 </li>
 
 <li class="orders"><!-- 4 -->
-Javascript: What does this do?  I need an explanation. 
+Javascript: At the bottom of at_random.html, what does this do? What is its purpose?
     <br>
     <blockquote>< script>
     if(window.location.pathname.split('/')[2] === ""){
@@ -76,18 +76,39 @@ Javascript: What does this do?  I need an explanation.
 </li>
 
 <li class="orders"><!-- 5 -->
+Bootstrap: Arrange to have footer partial to stick to bottom of web page (rather than floating in mid air) on pages where text content doesn’t fill the whole screen, such as on the “About” webpage.
 </li>
 
 <li class="orders"><!-- 6 -->
+CSS: At mobile size resolutions, when you click the hamburger button, there is a blue square around the border. See <a href="https://i.imgur.com/dnQbia3.jpg">here</a>. Can you make this square border crimson (instead of the default blue)?
 </li>
 
-<li class="orders"><!-- 7 -->
-</li>
+<li class="orders"> <!-- 7 -->
+Bootstrap: <a href="https://i.imgur.com/wxp3lbL.jpg">Here is is a demo</a> of the end product that I am trying to achieve with the following 4 points. At medium size resolutions:
+    <ol>
+        <li>Make navbar spacing between menu options equal</li>
+        <li>Move HOME and ABOUT down slightly</li>
+        <li>Close horizontal gap between menu options to be equal in distance</li>
+        <li>For the final menu option, change the appearance of the text from this:</li>
+        <Br>
+ANNOTATED ESSAY<Br>
+LIST<Br>
+<Br>
+...to stacked like this:<Br>
+<Br>
+	ANNOTATED<Br>
+	ESSAY LIST<Br>
+</li></ol></li>
 
-<li class="orders"><!-- 8 -->
+<li class="orders"><!-- 8 --> Django/Jinja: Share the same Generators class objects: 
+    <ul>
+        <li>bibliography, </li>
+        <li>content changes</li>
+    </ul>
+...so the same text field is mirrored in the Admin Dashboard across all Generators, Slashdots, Watchtower, Articles.
 </li>
-
-<li class="orders"><!-- 9 -->
+<!--
+<li class="orders"><!-- 9 
 </li>
 
     <ul>
