--- a/templates/work_orders/third_work_order.html
+++ b/templates/work_orders/third_work_order.html
@@ -61,7 +61,7 @@ Javascript: More animations for at_random.html template:
 </li>
 
 <li class="orders"><!-- 3 -->
-Javascript: Default toggled narrative content must be Galileo only (with FLOSS and St Paul untoggled). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)
+Javascript: Default toggled narrative content must show Galileo only (with FLOSS and St Paul untoggled by default). However if the web user selects FLOSS, St Paul and untoggles Galileo, then the website needs to remember the user’s selection when Django serves the next tarot card (at_random template)
 </li>
 
 <li class="orders"><!-- 4 -->
@@ -84,21 +84,21 @@ CSS: At mobile size resolutions, when you click the hamburger button, there is a
 </li>
 
 <li class="orders"> <!-- 7 -->
-Bootstrap: <a href="https://i.imgur.com/wxp3lbL.jpg">Here is is a demo</a> of the end product that I am trying to achieve with the following 4 points. At medium size resolutions:
+Bootstrap:This is <a href="https://i.imgur.com/wxp3lbL.jpg">Here is is a demo</a> of the end product that I am trying to achieve. Where as <a href="https://i.imgur.com/MT3AREl.jpg">here is a screenshot of what it looks like now</a>.  Here are some key differences. At medium size resolutions:
     <ol>
         <li>Make navbar spacing between menu options equal</li>
         <li>Move HOME and ABOUT down slightly</li>
         <li>Close horizontal gap between menu options to be equal in distance</li>
         <li>For the final menu option, change the appearance of the text from this:</li>
         <Br>
-ANNOTATED ESSAY<Br>
-LIST<Br>
-<Br>
-...to stacked like this:<Br>
-<Br>
-	ANNOTATED<Br>
-	ESSAY LIST<Br>
-</li></ol></li>
+            <strong>ANNOTATED ESSAY<Br>
+            LIST</strong><Br>
+            <Br>
+        ...to stacked like this:<Br>
+            <Br>
+	        <strong>ANNOTATED<Br>
+	        ESSAY LIST</strong><Br>
+        </li></ol></li>
 
 <li class="orders"><!-- 8 --> Django/Jinja: Share the same Generators class objects: 
     <ul>
