--- a/templates/essays/article.html
+++ b/templates/essays/article.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 
 This template is used for housing mutliple articles (like blog posts) with out pulling in the description or data from any of the other apps. These blog posts stand on their own. There are only basic object references such as:
 - models.Title
@@ -9,7 +9,7 @@ Example content:
 e.g. Forrest Gump + Titanic(?)
 e.g. Alex Jones
 
-Previously this was for articles profiling the protagonists of The Wizard of Oz and The Matrix but not any more. 
+Previously this was for articles profiling the protagonists of The Wizard of Oz and The Matrix but not any more.
 
 -->
 
@@ -23,22 +23,12 @@ Previously this was for articles profiling the protagonists of The Wizard of Oz 
 
 {% endblock %}
 
-{% block content %}    
+{% block content %}
 
     <article class="article">
-    <div class="essay">
-    
-    {% if articles %}
-
-        {% for article in articles %}    
-
-            <h1> {{ article.title|safe }} </h1>
-            <p> {{ article.content|safe }} </p>
-
-        {% endfor %}
-
-    {% endif %}
-
-    </div><!-- end essay -->
+        <div class="essay">
+            <h2> {{ article.title|safe }} </h2>
+            <p class="text-justify"> {{ article.content|safe }} </p>
+        </div>
     </article>
-{% endblock %}    
+{% endblock %}
