Req#4, Revamp at_random redirection with new Middle View

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -36,7 +36,7 @@
               class="nav-item mr-md-3 mx-sm-auto"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'at_random' %}">Tarot at Random</a>
+            <a class="nav-link" href="{% url 'get_random_generator' %}">Tarot at Random</a>
           </li>
 
           <li
