Req#5, stick footer into bottom

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,9 @@
   {% include 'partials/_navbar.html' %}
 
   <!-- Main Content -->
-  {% block content %} {% endblock %}
+  <div class="main-container">
+      {% block content %} {% endblock %}
+  </div>
 
   <!-- Footer -->
   {% include 'partials/_footer.html' %}
